--- a/config/config.yaml
+++ b/config/config.yaml
@@ -97,34 +97,31 @@ weight:
 
 # name 可以定义任意名称，只具有显示作用，即使项目运行了几天后，忽然改掉 name 也不会影响代码的正常运行
 platforms:
-  - id: "hackernews"
-    name: "Hacker News"
   - id: "toutiao"
     name: "今日头条"
   - id: "wallstreetcn-hot"
     name: "华尔街见闻"
+  - id: "wallstreetcn-quick"
+    name: "华尔街见闻 快讯"
   - id: "thepaper"
     name: "澎湃新闻"
   - id: "gelonghui"
     name: "格隆汇"
-  - id: "bilibili-hot-search"
-    name: "bilibili 热搜"
   - id: "cls-hot"
     name: "财联社热门"
+  - id: "cls-telegraph"
+    name: "财联社 电报"
+  - id: "cls-depth"
+    name: "财联社 深度"
   - id: "fastbull-news"
     name: "法布财经 头条"
   - id: "ifeng"
     name: "凤凰网"
-  - id: "weibo"
-    name: "微博"
-  - id: "douyin"
-    name: "抖音"
-  - id: "zhihu"
-    name: "知乎"
-  - id: "tencent-hot"
-    name: "腾讯新闻 综合早报"
-  - id: "github"
-    name: "GitHub"
-  - id: "baidu"
-    name: "Baidu"
+  - id: "xueqiu"
+    name: "雪球"
+  - id: "jin10"
+    name: "金十数据"
+  - id: "fastbull"
+    name: "快讯通"
+  
   
